--- a/Exercises/05.Frequent_Itemsets/Frequent_itemsets.ipynb
+++ b/Exercises/05.Frequent_Itemsets/Frequent_itemsets.ipynb
@@ -36,10 +36,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import operator\n",
@@ -49,6 +47,7 @@
     "Format the transaction dataset.\n",
     "Expect a list of transaction in the format:\n",
     "[[1, 3, 4], [2, 3, 5], [1, 2, 3, 5], ...]\n",
+    "### Return the unique_items and unordered set of unique list of each transaction, e.g [1,3,3] => [1,3]\n",
     "\"\"\"\n",
     "def preprocess(dataset):\n",
     "    unique_items = set()\n",
@@ -155,10 +154,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -178,17 +175,20 @@
     "    # This dictionary should contain the number of appearance of each itemset in the dataset.\n",
     "    # Itemset in Ck are represented as frozensets and can directly be uses as dictionary keys.\n",
     "    support_count = {}\n",
-    "    \n",
+    "\n",
     "    for transaction in dataset:\n",
     "        for candidate in Ck:\n",
     "            if candidate.issubset(transaction):\n",
-    "                ...\n",
+    "                if candidate in support_count:\n",
+    "                    support_count[candidate] += 1\n",
+    "                else:\n",
+    "                    support_count[candidate] = 1\n",
     "    \n",
     "    output = []\n",
     "    support_dict = {}\n",
     "    for key in support_count:\n",
     "        \n",
-    "        support = ...\n",
+    "        support = support_count[key]/len(dataset)\n",
     "        \n",
     "        if support >= min_support:\n",
     "            output.insert(0,key)\n",
@@ -205,12 +205,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "support\t itemset\n",
+      "------------------------------\n",
+      "0.07 \t {'whole milk', 'other vegetables'}\n",
+      "0.06 \t {'rolls/buns', 'whole milk'}\n",
+      "0.06 \t {'yogurt', 'whole milk'}\n",
+      "0.05 \t {'whole milk', 'root vegetables'}\n",
+      "0.05 \t {'root vegetables', 'other vegetables'}\n",
+      "0.04 \t {'yogurt', 'other vegetables'}\n",
+      "0.04 \t {'rolls/buns', 'other vegetables'}\n",
+      "0.04 \t {'tropical fruit', 'whole milk'}\n",
+      "0.04 \t {'whole milk', 'soda'}\n",
+      "0.04 \t {'rolls/buns', 'soda'}\n"
+     ]
+    }
+   ],
    "source": [
     "dataset = [ l.strip().split(',') for i,l in enumerate(open('groceries.csv').readlines())]\n",
     "\n",
@@ -231,7 +249,6 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -274,10 +291,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 32,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -362,10 +377,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 41,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -382,14 +395,14 @@
     "    \n",
     "    for Y in H:\n",
     "        # Compute X which is the frequent itemset minus the considered Y\n",
-    "        X           = ...\n",
+    "        X           = freqSet - Y\n",
     "        \n",
     "        # Compute support for both terms\n",
-    "        support_XuY = ...\n",
-    "        support_X   = ...\n",
+    "        support_XuY = supportData[freqSet]\n",
+    "        support_X   = supportData[X]\n",
     "        \n",
     "        # Compute confidence\n",
-    "        conf        = ...\n",
+    "        conf        = support_XuY/support_X\n",
     "        \n",
     "        if conf >= min_confidence: \n",
     "            rules.append((X, Y, conf))\n",
@@ -406,12 +419,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "confidence\t rule\n",
+      "------------------------------\n",
+      "0.59 \t {'citrus fruit', 'root vegetables'} -> {'other vegetables'}\n",
+      "0.58 \t {'tropical fruit', 'root vegetables'} -> {'other vegetables'}\n",
+      "0.58 \t {'yogurt', 'curd'} -> {'whole milk'}\n",
+      "0.57 \t {'butter', 'other vegetables'} -> {'whole milk'}\n",
+      "0.57 \t {'tropical fruit', 'root vegetables'} -> {'whole milk'}\n",
+      "0.56 \t {'yogurt', 'root vegetables'} -> {'whole milk'}\n",
+      "0.55 \t {'domestic eggs', 'other vegetables'} -> {'whole milk'}\n",
+      "0.52 \t {'whipped/sour cream', 'yogurt'} -> {'whole milk'}\n",
+      "0.52 \t {'rolls/buns', 'root vegetables'} -> {'whole milk'}\n",
+      "0.52 \t {'pip fruit', 'other vegetables'} -> {'whole milk'}\n"
+     ]
+    }
+   ],
    "source": [
     "rules=generate_rules(L,support, min_confidence=0.1)\n",
     "print_rules(rules,10)"
@@ -429,9 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -472,11 +501,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     /Users/sanadhisutandi/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     /Users/sanadhisutandi/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
     "# Loading of libraries and documents\n",
     "\n",
@@ -522,11 +562,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "support\t itemset\n",
+      "------------------------------\n",
+      "0.08 \t {'via', 'epfl'}\n",
+      "0.06 \t {'’', 'epfl'}\n",
+      "0.05 \t {'epfl', 'new'}\n",
+      "0.05 \t {'amp', 'epfl'}\n",
+      "0.05 \t {'research', 'epfl'}\n",
+      "0.04 \t {'lausann', 'epfl'}\n",
+      "0.04 \t {'epfl', 'vdtech'}\n",
+      "0.04 \t {'switzerland', 'epfl'}\n",
+      "0.04 \t {'robot', 'epfl'}\n",
+      "0.03 \t {'day', 'epfl'}\n",
+      "0.03 \t {'swiss', 'epfl'}\n",
+      "0.03 \t {'via', 'vdtech'}\n",
+      "0.03 \t {'via', 'epfl', 'vdtech'}\n",
+      "0.03 \t {'epfl', 'scienc'}\n",
+      "0.03 \t {'epfl', 'innov'}\n",
+      "0.03 \t {'epfl', 'student'}\n",
+      "0.03 \t {'first', 'epfl'}\n",
+      "0.03 \t {'epfl', 'work'}\n",
+      "0.02 \t {'technolog', 'epfl'}\n",
+      "0.02 \t {'epfl', '2018'}\n"
+     ]
+    }
+   ],
    "source": [
     "L,support = apriori(documents,min_support = 0.01)\n",
     "print_support(support,20,min_items=2)"
@@ -534,12 +601,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "confidence\t rule\n",
+      "------------------------------\n",
+      "1.00 \t {'«'} -> {'epfl'}\n",
+      "1.00 \t {'»'} -> {'epfl'}\n",
+      "1.00 \t {'«'} -> {'»'}\n",
+      "1.00 \t {'»'} -> {'«'}\n",
+      "1.00 \t {'model'} -> {'epfl'}\n",
+      "1.00 \t {'perovskit'} -> {'epfl'}\n",
+      "1.00 \t {'next'} -> {'epfl'}\n",
+      "1.00 \t {'improv'} -> {'epfl'}\n",
+      "1.00 \t {'particip'} -> {'epfl'}\n",
+      "1.00 \t {'technolog'} -> {'epfl'}\n",
+      "1.00 \t {'drone'} -> {'epfl'}\n",
+      "1.00 \t {'epflcampu'} -> {'epfl'}\n",
+      "1.00 \t {'learn'} -> {'epfl'}\n",
+      "1.00 \t {'present'} -> {'epfl'}\n",
+      "1.00 \t {'mooc'} -> {'epfl'}\n",
+      "1.00 \t {'show'} -> {'epfl'}\n",
+      "1.00 \t {'brain'} -> {'epfl'}\n",
+      "1.00 \t {'scientist'} -> {'epfl'}\n",
+      "1.00 \t {'eth'} -> {'epfl'}\n",
+      "1.00 \t {'«'} -> {'»', 'epfl'}\n"
+     ]
+    }
+   ],
    "source": [
     "rules=generate_rules(L,support, min_confidence=0.1)\n",
     "print_rules(rules,20)"
@@ -590,7 +685,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -604,7 +699,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
