--- a/Exercises/09.Recommender_Systems/Exercise 9 - Recommender_Systems - Questions.ipynb
+++ b/Exercises/09.Recommender_Systems/Exercise 9 - Recommender_Systems - Questions.ipynb
@@ -85,17 +85,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -255,13 +255,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(100000, 4)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of users = 943 | Number of movies = 1682\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: get the number of users and itens\n",
-    "n_users = ...\n",
-    "n_items = ...\n",
+    "n_users = len(df['user_id'].unique())\n",
+    "n_items = len(df['item_id'].unique())\n",
     "print ('Number of users = ' + str(n_users) + ' | Number of movies = ' + str(n_items))"
    ]
   },
@@ -274,9 +302,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>item_id</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>timestamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>100000.00000</td>\n",
+       "      <td>100000.000000</td>\n",
+       "      <td>100000.000000</td>\n",
+       "      <td>1.000000e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>462.48475</td>\n",
+       "      <td>425.530130</td>\n",
+       "      <td>3.529860</td>\n",
+       "      <td>8.835289e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>266.61442</td>\n",
+       "      <td>330.798356</td>\n",
+       "      <td>1.125674</td>\n",
+       "      <td>5.343856e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>8.747247e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>254.00000</td>\n",
+       "      <td>175.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>8.794487e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>447.00000</td>\n",
+       "      <td>322.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>8.828269e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>682.00000</td>\n",
+       "      <td>631.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>8.882600e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>943.00000</td>\n",
+       "      <td>1682.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>8.932866e+08</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            user_id        item_id         rating     timestamp\n",
+       "count  100000.00000  100000.000000  100000.000000  1.000000e+05\n",
+       "mean      462.48475     425.530130       3.529860  8.835289e+08\n",
+       "std       266.61442     330.798356       1.125674  5.343856e+06\n",
+       "min         1.00000       1.000000       1.000000  8.747247e+08\n",
+       "25%       254.00000     175.000000       3.000000  8.794487e+08\n",
+       "50%       447.00000     322.000000       4.000000  8.828269e+08\n",
+       "75%       682.00000     631.000000       4.000000  8.882600e+08\n",
+       "max       943.00000    1682.000000       5.000000  8.932866e+08"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.describe()"
    ]
@@ -290,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +453,9 @@
     "        This function should return a numpy matrix with a shape (n_users, n_items). \n",
     "        Each entry is the rating given by the user to the item\n",
     "    \"\"\"\n",
-    "    ...\n",
+    "    data_matrix = np.zeros([n_users, n_items])\n",
+    "    for index, row in data.iterrows():\n",
+    "        data_matrix[row['user_id']-1,row['item_id']-1] = row['rating']\n",
     "    return data_matrix\n",
     "\n",
     "train_data_matrix= create_data_matrix(train_data, n_users, n_items)\n",
@@ -336,9 +471,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train_data_matrix\n",
+      "[[0. 3. 4. ... 0. 0. 0.]\n",
+      " [4. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " ...\n",
+      " [5. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 5. 0. ... 0. 0. 0.]]\n",
+      "test_data_matrix\n",
+      "[[5. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " ...\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]]\n"
+     ]
+    }
+   ],
    "source": [
     "print('train_data_matrix')\n",
     "print(train_data_matrix)\n",
@@ -389,15 +547,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.         0.70568037 0.74751901 ... 1.         1.         1.        ]\n",
+      " [0.70568037 0.         0.81144044 ... 1.         0.90900731 1.        ]\n",
+      " [0.74751901 0.81144044 0.         ... 1.         1.         1.        ]\n",
+      " ...\n",
+      " [1.         1.         1.         ... 0.         1.         1.        ]\n",
+      " [1.         0.90900731 1.         ... 1.         0.         1.        ]\n",
+      " [1.         1.         1.         ... 1.         1.         0.        ]]\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO fill the code to compute the similarity matrix\n",
     "from sklearn.metrics.pairwise import pairwise_distances\n",
-    "item_similarity = ...\n",
+    "item_similarity = pairwise_distances(np.transpose(train_data_matrix),metric=\"cosine\")\n",
     "\n",
     "# check how the matrix looks like\n",
     "print(item_similarity)"
@@ -412,14 +584,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[4. 3. 4. ... 4. 4. 4.]\n",
+      " [4. 4. 4. ... 4. 4. 4.]\n",
+      " [3. 3. 3. ... 3. 3. 3.]\n",
+      " ...\n",
+      " [5. 4. 4. ... 4. 4. 4.]\n",
+      " [4. 4. 4. ... 4. 4. 4.]\n",
+      " [3. 5. 3. ... 3. 3. 3.]]\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Fill the code for predicting the ratings. \n",
     "# The output is a numpy matrix with the dimensions ((n_users,n_items)) and with the corresponding ranking at each cell.\n",
     "def item_based_predict(ratings, similarity):\n",
-    "    ...\n",
+    "    pred = np.zeros([ratings.shape[0],ratings.shape[1]])\n",
+    "    for x in range(pred.shape[0]):\n",
+    "        \n",
+    "        notZerosIndex = np.where(ratings[x,:] != 0)\n",
+    "        \n",
+    "        for y in range(pred.shape[1]):\n",
+    "            if(ratings[x,y]==0):\n",
+    "                relativeSim = (similarity[notZerosIndex,y])\n",
+    "                predRatings = np.dot(ratings[x,notZerosIndex],np.transpose(relativeSim)) / np.sum(relativeSim)\n",
+    "                pred[x,y] = np.round(predRatings)\n",
+    "            else:\n",
+    "                pred[x,y] = ratings[x,y]\n",
     "    return pred\n",
     "\n",
     "item_prediction = item_based_predict(train_data_matrix, item_similarity)\n",
@@ -633,7 +830,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -647,7 +844,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
