--Exercise 9: Part 3,4 Done

--- a/Exercises/09.Recommender_Systems/Exercise 9 - Recommender_Systems - Questions.ipynb
+++ b/Exercises/09.Recommender_Systems/Exercise 9 - Recommender_Systems - Questions.ipynb
@@ -662,12 +662,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(943, 943)\n",
+      "[[0.         0.85663074 0.96758314 ... 0.9103956  0.91215203 0.68584107]\n",
+      " [0.85663074 0.         0.89240931 ... 0.91889238 0.85429877 0.92022661]\n",
+      " [0.96758314 0.89240931 0.         ... 0.97613014 0.89296834 1.        ]\n",
+      " ...\n",
+      " [0.9103956  0.91889238 0.97613014 ... 0.         0.93055179 0.93272018]\n",
+      " [0.91215203 0.85429877 0.89296834 ... 0.93055179 0.         0.8828355 ]\n",
+      " [0.68584107 0.92022661 1.         ... 0.93272018 0.8828355  0.        ]]\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO fill the code to compute the similarity matrix\n",
-    "user_similarity = ...\n",
+    "user_similarity = pairwise_distances(train_data_matrix,metric=\"cosine\")\n",
     "\n",
     "# print the shape as a sanity check\n",
     "print(user_similarity.shape)\n",
@@ -678,13 +693,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[4. 3. 4. ... 2. 4. 4.]\n",
+      " [4. 4. 3. ... 3. 4. 4.]\n",
+      " [3. 3. 2. ... 2. 3. 3.]\n",
+      " ...\n",
+      " [5. 4. 4. ... 3. 4. 4.]\n",
+      " [5. 4. 4. ... 3. 4. 4.]\n",
+      " [4. 5. 3. ... 2. 3. 3.]]\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Fill the code for predicting the ratings. \n",
+    "import math\n",
+    "\n",
     "def user_based_predict(ratings, similarity):\n",
-    "    ...\n",
+    "    \n",
+    "    pred = np.zeros([ratings.shape[0],ratings.shape[1]])\n",
+    "    ratings[ratings == 0] = np.nan\n",
+    "    averageRating = np.nanmean(ratings,axis=1)\n",
+    "\n",
+    "    for x in range(pred.shape[0]):\n",
+    "        for y in range(pred.shape[1]):\n",
+    "            if(np.isnan(ratings[x,y])):\n",
+    "                notZerosUsers = np.where(~np.isnan(ratings[:,y]))\n",
+    "                if (len(notZerosUsers[0]) > 0):\n",
+    "                    relativeSim = (similarity[notZerosUsers,x])\n",
+    "                    relativeAvg = (averageRating[notZerosUsers])\n",
+    "                    relativeAvg = relativeAvg.reshape([1, relativeAvg.shape[0]])\n",
+    "                    predRatings = np.dot((ratings[notZerosUsers,y] - relativeAvg), np.transpose(relativeSim)) / np.sum(relativeSim)\n",
+    "                    pred[x,y] = np.round(averageRating[x] + predRatings) \n",
+    "                else:\n",
+    "                    pred[x,y] = np.round(averageRating[x])\n",
+    "            else:\n",
+    "                pred[x,y] = ratings[x,y]\n",
     "    return pred\n",
     "\n",
     "user_prediction = user_based_predict(train_data_matrix, user_similarity)\n",
@@ -718,15 +767,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User-based CF RMSE: 1.0073926741842032\n",
+      "Item-based CF RMSE: 1.090247678282325\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: add the code for computing RMSE for user and item based methods\n",
     "from sklearn.metrics import mean_squared_error\n",
     "from math import sqrt\n",
     "def rmse(prediction, ground_truth):\n",
-    "    ...\n",
+    "    y_pred = []\n",
+    "    y_truth = []\n",
+    "    n_user = ground_truth.shape[0]\n",
+    "    n_item = ground_truth.shape[1]\n",
+    "    for i in range(n_user):\n",
+    "        for j in range(n_item):\n",
+    "            if ground_truth[i,j] != 0 :\n",
+    "                y_pred.append(prediction[i,j])\n",
+    "                y_truth.append(ground_truth[i,j])\n",
+    "    \n",
+    "    y_pred = np.array(y_pred)\n",
+    "    y_truth = np.array(y_truth)\n",
+    "    \n",
+    "    rmse_val = sqrt(mean_squared_error(y_truth,y_pred))\n",
+    "    return rmse_val\n",
     "\n",
     "print ('User-based CF RMSE: ' + str(rmse(user_prediction, test_data_matrix)))\n",
     "print ('Item-based CF RMSE: ' + str(rmse(item_prediction, test_data_matrix)))"
