--- a/Exercises/09.Recommender_Systems/Exercise 9 - Recommender_Systems - Questions.ipynb
+++ b/Exercises/09.Recommender_Systems/Exercise 9 - Recommender_Systems - Questions.ipynb
@@ -822,9 +822,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset jester could not be found. Do you want to download it? [Y/n] Y\n",
+      "Trying to download dataset from http://eigentaste.berkeley.edu/dataset/jester_dataset_2.zip...\n",
+      "Done! Dataset jester has been saved to /Users/sanadhisutandi/.surprise_data/jester\n"
+     ]
+    }
+   ],
    "source": [
     "from surprise import Dataset\n",
     "\n",
@@ -845,19 +855,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/sanadhisutandi/anaconda/lib/python3.6/site-packages/surprise/evaluate.py:66: UserWarning: The evaluate() method is deprecated. Please use model_selection.cross_validate() instead.\n",
+      "  'model_selection.cross_validate() instead.', UserWarning)\n",
+      "/Users/sanadhisutandi/anaconda/lib/python3.6/site-packages/surprise/dataset.py:193: UserWarning: Using data.split() or using load_from_folds() without using a CV iterator is now deprecated. \n",
+      "  UserWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluating RMSE, MAE of algorithm SVD.\n",
+      "\n",
+      "------------\n",
+      "Fold 1\n",
+      "RMSE: 4.3877\n",
+      "MAE:  3.3202\n",
+      "------------\n",
+      "Fold 2\n",
+      "RMSE: 4.3712\n",
+      "MAE:  3.3107\n",
+      "------------\n",
+      "------------\n",
+      "Mean RMSE: 4.3794\n",
+      "Mean MAE : 3.3154\n",
+      "------------\n",
+      "------------\n",
+      "        Fold 1  Fold 2  Mean    \n",
+      "RMSE    4.3877  4.3712  4.3794  \n",
+      "MAE     3.3202  3.3107  3.3154  \n"
+     ]
+    }
+   ],
    "source": [
     "from surprise import SVD\n",
     "from surprise import evaluate, print_perf\n",
+    "from surprise.model_selection import cross_validate\n",
     "\n",
     "# TODO: fill the code for evaluating the model based on SVD\n",
     "# We'll use the SVD algorithm.\n",
-    "algo = ...\n",
+    "algo = SVD()\n",
     "\n",
     "# Evaluate performances of our algorithm on the dataset.\n",
-    "perf = ...\n",
+    "perf = evaluate(algo, data, measures=['RMSE', 'MAE'])\n",
     "\n",
     "print_perf(perf)"
    ]
@@ -871,15 +918,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 139,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE: 4.4395\n",
+      "RMSE: 4.4288\n",
+      "RMSE: 4.4304\n"
+     ]
+    }
+   ],
    "source": [
+    "from surprise.model_selection import KFold\n",
+    "from surprise import accuracy\n",
+    "\n",
     "uid = str(196)  # raw user id (as in the ratings file). They are **strings**!\n",
     "iid = str(98)  # raw item id (as in the ratings file). They are **strings**!\n",
     "\n",
-    "# TODO get a prediction for user with uid and item iid\n",
-    "pred = ..."
+    "predictions = None\n",
+    "\n",
+    "kf = KFold(n_splits=3)\n",
+    "\n",
+    "for trainset, testset in kf.split(Dataset.load_builtin('jester')):\n",
+    "\n",
+    "    # train and test algorithm.\n",
+    "    algo.fit(trainset)\n",
+    "    predictions = algo.test(testset)\n",
+    "\n",
+    "    # Compute and print Root Mean Squared Error\n",
+    "    accuracy.rmse(predictions, verbose=True)\n",
+    "\n",
+    "pred = algo.predict(uid,iid)"
    ]
   },
   {
@@ -889,6 +961,26 @@
     "If you are interested in knowing what the joke was for item 98, you can check the dataset. By default, the dataset will be downloaded in your home directory, under `$HOME/.surprise_data/jester/`. The file `jester_items.dat` has the text of the jokes. 😉\n",
     "\n",
     "Finally, feel free to explore the library further. It might come in handy for your future projects!\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Prediction(uid='196', iid='98', r_ui=None, est=-1.8517835503534652, details={'was_impossible': False})"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred"
    ]
   },
   {
