--Exercise: Finish 10 (Semantic Web)

--- a/Exercises/10.Semantic_Web/Semantic_Web.ipynb
+++ b/Exercises/10.Semantic_Web/Semantic_Web.ipynb
@@ -33,13 +33,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'o': 'Gods', 'p': 'are', 's': 'Aphrodite and Eros'},\n",
+       " {'o': 'Eros', 'p': 'is a parent of', 's': 'Aphrodite'},\n",
+       " {'o': 'beautiful', 'p': 'is', 's': 'Aphrodite'},\n",
+       " {'o': 'happy', 'p': 'is', 's': 'Aphrodite'}]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "statements = []\n",
     "#statement template: {'s':'', 'p':'', 'o':''}\n",
-    "statements.append(...)"
+    "statements.append({'s':'Aphrodite and Eros','p':'are','o':'Gods'})\n",
+    "statements.append({'s':'Aphrodite','p':'is a parent of','o':'Eros'})\n",
+    "statements.append({'s':'Aphrodite','p':'is','o':'beautiful'})\n",
+    "statements.append({'s':'Aphrodite','p':'is','o':'happy'})\n",
+    "statements"
    ]
   },
   {
@@ -53,9 +71,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Classes: ...\n",
-    "- Instances: ...\n",
-    "- Properties: ..."
+    "- Classes: Gods, beautiful, happy\n",
+    "- Instances: Aphrodite, Eros\n",
+    "- Properties: is a, is a parent of"
    ]
   },
   {
@@ -68,21 +86,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n"
+      "['Aphrodite']\n"
      ]
     }
    ],
    "source": [
     "def query():\n",
     "    results = []\n",
-    "    ...\n",
+    "    for statement in statements:\n",
+    "        if statement['o'] == 'happy':\n",
+    "            results.append(statement['s'])\n",
     "    print(results)\n",
     "\n",
     "query()"
@@ -110,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +141,22 @@
     "    while (new_statements):\n",
     "        new_statements = False\n",
     "\n",
-    "        ..."
+    "        for statement in statements:\n",
+    "            if statement['o'] == 'successful':\n",
+    "                for s in statements:\n",
+    "                    if s['p'] == 'is a parent of' and statement['s'] == s['s']:\n",
+    "                        new_statement = {'s': s['o'],'p':'is','o':'happy'}\n",
+    "                        if new_statement not in statements:\n",
+    "                            statements.append(new_statement)\n",
+    "                            new_statements = True\n",
+    "        \n",
+    "        for statement in statements:\n",
+    "            if statement['o'] == 'happy':\n",
+    "                new_statement = {'s': statement['s'],'p':'is','o':'successful'}\n",
+    "                if new_statement not in statements:\n",
+    "                    statements.append(new_statement)\n",
+    "                    new_statements = True\n",
+    "        "
    ]
   },
   {
@@ -135,7 +170,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "..."
+    "if in reality children is not successful while the parent is happy or successful"
    ]
   },
   {
@@ -147,20 +182,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n"
+      "['Aphrodite', 'Eros']\n"
      ]
     }
    ],
    "source": [
     "inference()\n",
     "query()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'o': 'Gods', 'p': 'are', 's': 'Aphrodite and Eros'},\n",
+       " {'o': 'Eros', 'p': 'is a parent of', 's': 'Aphrodite'},\n",
+       " {'o': 'beautiful', 'p': 'is', 's': 'Aphrodite'},\n",
+       " {'o': 'happy', 'p': 'is', 's': 'Aphrodite'},\n",
+       " {'o': 'successful', 'p': 'is', 's': 'Aphrodite'},\n",
+       " {'o': 'happy', 'p': 'is', 's': 'Eros'},\n",
+       " {'o': 'successful', 'p': 'is', 's': 'Eros'}]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "statements"
    ]
   },
   {
@@ -187,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.5"
   },
   "toc": {
    "colors": {
