--- a/Exercises/11.Entity_and_Information_Extraction/Entity_and_Information_Extraction.ipynb
+++ b/Exercises/11.Entity_and_Information_Extraction/Entity_and_Information_Extraction.ipynb
@@ -67,14 +67,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'director': 'Daniel Lee', 'movie': '14_Blades'}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'14 Blades is a 2010 wuxia film directed by Daniel Lee, starring Donnie Yen, Zhao Wei, Sammo Hung, Wu Chun, Kate Tsui, Qi Yuwu and Damian Lau. The film was released on 4 February 2010 in China and on 11 February 2010 in Hong Kong.\\n\\n'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "example = parse_wikipedia(movies[1]['movie'])\n",
+    "example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Daniel Lee',\n",
+       " 'Donnie Yen',\n",
+       " 'Zhao Wei',\n",
+       " 'Sammo Hung',\n",
+       " 'Wu Chun',\n",
+       " 'Kate Tsui',\n",
+       " 'Qi Yuwu',\n",
+       " 'Damian Lau']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def find_PER_entities(txt):\n",
     "    persons = []\n",
-    "    ...\n",
-    "    return persons"
+    "    nlp_txt = nlp(txt)\n",
+    "    \n",
+    "    for e in nlp_txt.ents:\n",
+    "        if e.label_ == \"PERSON\":\n",
+    "            persons.append(e.text)\n",
+    "        \n",
+    "    return persons\n",
+    "\n",
+    "example_person = find_PER_entities(example)\n",
+    "example_person"
    ]
   },
   {
@@ -86,24 +153,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Daniel Lee'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def find_director(txt, persons):\n",
-    "    ...\n",
-    "    return ''"
+    "    split = re.sub('[!?,.]', '', txt).split() # simple split method by !, ?, ',', '.'\n",
+    "    for index in range(0,len(split)):\n",
+    "        if split[index] == \"directed\":\n",
+    "            for index2 in range(index,len(split)):\n",
+    "                for person in persons:\n",
+    "                    if person.startswith(split[index2]):\n",
+    "                        return person\n",
+    "    return ''\n",
+    "\n",
+    "find_director(example, example_person) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "movies = read_tsv()\n",
     "\n",
     "statements=[]\n",
+    "fp = 0\n",
     "for m in movies:\n",
     "\n",
     "        txt = parse_wikipedia(m['movie'])\n",
@@ -111,7 +198,9 @@
     "        director = find_director(txt, persons)\n",
     "        \n",
     "        if director != '':\n",
-    "            statements.append(m['movie'] + ' is directed by ' + director + '.')"
+    "            statements.append(m['movie'] + ' is directed by ' + director + '.')\n",
+    "            if director != m['director']:\n",
+    "                fp += 1"
    ]
   },
   {
@@ -123,24 +212,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precision: Ellipsis\n",
-      "Recall: Ellipsis\n",
+      "Precision: 0.8081632653061225\n",
+      "Recall: 0.825\n",
       "\n",
-      "***Sample Statements***\n"
+      "***Sample Statements***\n",
+      "13_Assassins_(2010_film) is directed by Takashi Miike.\n",
+      "14_Blades is directed by Daniel Lee.\n",
+      "22_Bullets is directed by Richard Berry.\n",
+      "The_A-Team_(film) is directed by Joe Carnahan.\n",
+      "Alien_vs_Ninja is directed by Seiji Chiba.\n"
      ]
     }
    ],
    "source": [
     "# compute precision and recall\n",
-    "precision = ...\n",
-    "recall = ...\n",
+    "fn = len(movies) - len(statements)\n",
+    "tp = len(statements) - fp\n",
+    "\n",
+    "precision = tp / (tp + fp)\n",
+    "recall = tp / (tp + fn)\n",
     "print ('Precision:',precision)\n",
     "print ('Recall:',recall)\n",
     "\n",
@@ -164,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -197,13 +294,17 @@
      "output_type": "stream",
      "text": [
       "Annotation\n",
-      " [] \n",
+      " [['The best', 'O'], ['best blues', 'O'], ['blues singer', 'O'], ['singer was', 'O'], ['was Bobby', 'O'], ['Bobby Bland', 'I'], ['Bland while', 'O'], ['while Ray', 'O'], ['Ray Charles', 'I'], ['Charles pioneered', 'O'], ['pioneered soul', 'O'], ['soul music', 'O'], ['music .', 'O'], ['Bobby Bland', 'I'], ['Bland was', 'O'], ['was just', 'O'], ['just a', 'O'], ['a singer', 'O'], ['singer whereas', 'O'], ['whereas Ray', 'O'], ['Ray Charles', 'I'], ['Charles was', 'O'], ['was a', 'O'], ['a pianist', 'O'], ['pianist ,', 'O'], [', songwriter', 'O'], ['songwriter and', 'O'], ['and singer', 'O'], ['singer .None', 'O'], ['.None of', 'O'], ['of them', 'O'], ['them lived', 'O'], ['lived in', 'O'], ['in Chicago', 'O'], ['Chicago .', 'O']] \n",
       "\n"
      ]
     }
    ],
    "source": [
     "#Bigram Representation\n",
+    "\n",
+    "#### [:-1] to remove last element\n",
+    "#### [1:] to start from 2nd element\n",
+    "\n",
     "def getBigrams(sents):\n",
     "    return [b[0]+' '+b[1] for l in sents for b in zip(l.split(' ')[:-1], l.split(' ')[1:])]\n",
     "\n",
@@ -213,7 +314,10 @@
     "PER = ['Bobby Bland', 'Ray Charles']\n",
     "annotations = []\n",
     "for b in bigrams:\n",
-    "    ...\n",
+    "    if b in PER:\n",
+    "        annotations.append([b,\"I\"])\n",
+    "    else:\n",
+    "        annotations.append([b,\"O\"])\n",
     "print('Annotation\\n', annotations,'\\n')"
    ]
   },
@@ -228,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -236,10 +340,10 @@
      "output_type": "stream",
      "text": [
       "Transition Probabilities\n",
-      " {'P(O|O)': Ellipsis, 'P(I|I)': Ellipsis, 'P(I|start)': Ellipsis, 'P(O|start)': Ellipsis, 'P(I|O)': Ellipsis, 'P(O|I)': Ellipsis} \n",
+      " {'P(I|start)': 0.11764705882352941, 'P(O|start)': 0.8823529411764706, 'P(O|O)': 0.8666666666666667, 'P(O|I)': 0.13333333333333333, 'P(I|O)': 1.0, 'P(I|I)': 0.0} \n",
       "\n",
       "Emission Probabilities\n",
-      " {'P(0_upper|O)': Ellipsis, 'P(0_upper|I)': Ellipsis, 'P(1_upper|O)': Ellipsis, 'P(2_upper|O)': Ellipsis, 'P(1_upper|I)': Ellipsis, 'P(2_upper|I)': Ellipsis} \n",
+      " {'P(2_upper|O)': 0.014285714285714285, 'P(2_upper|I)': 0.5142857142857142, 'P(1_upper|O)': 0.18095238095238095, 'P(1_upper|I)': 0.014285714285714285, 'P(0_upper|O)': 0.36428571428571427, 'P(0_upper|I)': 0.014285714285714285} \n",
       "\n"
      ]
     }
@@ -250,30 +354,84 @@
     "#Transition Probabilities\n",
     "transition_prob={}\n",
     "\n",
+    "nI = 0\n",
+    "nO = 0\n",
+    "\n",
+    "for annotation in annotations[1:]:\n",
+    "    if annotation[1] == \"I\":\n",
+    "        nI += 1\n",
+    "    elif annotation[1] == \"O\":\n",
+    "        nO += 1\n",
     "\n",
     "#Prior\n",
-    "transition_prob['P(I|start)'] = ...\n",
-    "transition_prob['P(O|start)'] = ...\n",
+    "transition_prob['P(I|start)'] = nI / (nI + nO)\n",
+    "transition_prob['P(O|start)'] = 1 - transition_prob['P(I|start)']\n",
     "\n",
-    "transition_prob['P(O|O)'] = ...\n",
-    "transition_prob['P(O|I)'] = ...\n",
-    "transition_prob['P(I|O)'] = ...\n",
-    "transition_prob['P(I|I)'] = ...\n",
+    "O_O_count = 0\n",
+    "O_I_count = 0\n",
+    "I_I_count = 0\n",
+    "I_O_count = 0\n",
+    "\n",
+    "for index in range(0,len(annotations)-1):\n",
+    "    if annotations[index][1] == \"O\":\n",
+    "        if annotations[index+1][1] == \"O\":\n",
+    "            O_O_count += 1\n",
+    "        elif annotations[index+1][1] == \"I\":\n",
+    "            O_I_count += 1\n",
+    "    elif annotations[index][1] == \"I\":\n",
+    "        if annotations[index+1][1] == \"O\":\n",
+    "            I_O_count += 1\n",
+    "        elif annotations[index+1][1] == \"I\":\n",
+    "            I_I_count += 1\n",
+    "\n",
+    "transition_prob['P(O|O)'] = O_O_count / nO\n",
+    "transition_prob['P(O|I)'] = I_O_count / nO\n",
+    "transition_prob['P(I|O)'] = O_I_count / nI\n",
+    "transition_prob['P(I|I)'] = I_I_count / nI\n",
     "\n",
     "print('Transition Probabilities\\n',transition_prob, '\\n')\n",
     "\n",
     "#Emission Probabilities\n",
     "emission_prob={}\n",
     "\n",
+    "def count_upper_first_char(bigram):\n",
+    "    bigram = bigram.split(\" \")\n",
+    "    count = 0\n",
+    "    if bigram[0][0].isupper():\n",
+    "        count += 1\n",
+    "    if bigram[1][0].isupper():\n",
+    "        count += 1\n",
+    "    return count\n",
     "        \n",
-    "default_emission = ...\n",
+    "default_emission = (1 - lambda_) / len(annotations) # len(annotations) == len(bigrams)\n",
     "\n",
-    "emission_prob['P(2_upper|O)'] = ...\n",
-    "emission_prob['P(2_upper|I)'] = ...\n",
-    "emission_prob['P(1_upper|O)'] = ...\n",
-    "emission_prob['P(1_upper|I)'] = ...\n",
-    "emission_prob['P(0_upper|O)'] = ...\n",
-    "emission_prob['P(0_upper|I)'] = ...\n",
+    "two_upper_O = 0\n",
+    "two_upper_I = 0\n",
+    "one_upper_O = 0\n",
+    "one_upper_I = 0\n",
+    "zero_upper_O = 0\n",
+    "zero_upper_I = 0\n",
+    "\n",
+    "for annotation in annotations:\n",
+    "    if count_upper_first_char(annotation[0]) == 2 and annotation[1] == \"O\":\n",
+    "        two_upper_O += 1\n",
+    "    elif count_upper_first_char(annotation[0]) == 2 and annotation[1] == \"I\":\n",
+    "        two_upper_I += 1\n",
+    "    elif count_upper_first_char(annotation[0]) == 1 and annotation[1] == \"O\":\n",
+    "        one_upper_O += 1\n",
+    "    elif count_upper_first_char(annotation[0]) == 1 and annotation[1] == \"I\":\n",
+    "        one_upper_I += 1\n",
+    "    elif count_upper_first_char(annotation[0]) == 0 and annotation[1] == \"O\":\n",
+    "        zero_upper_O += 1\n",
+    "    elif count_upper_first_char(annotation[0]) == 0 and annotation[1] == \"I\":\n",
+    "        zero_upper_I += 1\n",
+    "\n",
+    "emission_prob['P(2_upper|O)'] = (two_upper_O / nO) * lambda_ + default_emission\n",
+    "emission_prob['P(2_upper|I)'] = (two_upper_I / nI) * lambda_ + default_emission\n",
+    "emission_prob['P(1_upper|O)'] = (one_upper_O / nO) * lambda_ + default_emission\n",
+    "emission_prob['P(1_upper|I)'] = (one_upper_I / nI) * lambda_ + default_emission\n",
+    "emission_prob['P(0_upper|O)'] = (zero_upper_O / nO) * lambda_ + default_emission\n",
+    "emission_prob['P(0_upper|I)'] = (zero_upper_I / nI) * lambda_ + default_emission\n",
     "\n",
     "print('Emission Probabilities\\n', emission_prob, '\\n')"
    ]
@@ -287,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +453,7 @@
      "output_type": "stream",
      "text": [
       "Predicted Entities\n",
-      " [] \n",
+      " ['Ray Charles', 'Bobby Bland', 'Ray Charles', 'Muddy Waters', 'Chicago Blues'] \n",
       "\n"
      ]
     }
@@ -306,10 +464,12 @@
     "entities=[]\n",
     "prev_state='start'\n",
     "for b in bigrams:\n",
-    "    I_prob = ...\n",
-    "    O_prob = ...\n",
+    "    I_prob = transition_prob[\"P(I|\" + prev_state + \")\"] * \\\n",
+    "             emission_prob[\"P(\" + str(count_upper_first_char(b)) + \"_upper|I)\"]\n",
+    "    O_prob = transition_prob[\"P(O|\" + prev_state + \")\"] * \\\n",
+    "             emission_prob[\"P(\" + str(count_upper_first_char(b)) + \"_upper|O)\"]\n",
     "    \n",
-    "    if ...:\n",
+    "    if O_prob > I_prob:\n",
     "        prev_state = 'O'\n",
     "    else:\n",
     "        entities.append(b)\n",
@@ -322,7 +482,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Precision is *...%* while recall is *...%*. "
+    "Precision is *75%* while recall is *100%*. \n",
+    "<br>Chicago Blues is not PER"
    ]
   },
   {
@@ -356,7 +517,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.5"
   },
   "toc": {
    "colors": {
