--- a/Exercises/01.Vector_Space_Retrieval/Vector_Space_Retrieval.ipynb
+++ b/Exercises/01.Vector_Space_Retrieval/Vector_Space_Retrieval.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -113,14 +113,14 @@
     "    counts = Counter(document)\n",
     "\n",
     "    max_count = counts.most_common(1)[0][1]\n",
-    "    for i,term in enumerate(vocabulary):\n",
+    "    for i, term in enumerate(vocabulary):\n",
     "        vector[i] =  counts[term] * idf[term] / max_count\n",
     "    # Return the vector of vocabularies relative to the document\n",
     "    return vector\n",
     "\n",
     "# Compute IDF values and vectors\n",
     "idf = idf_values(vocabulary, documents)\n",
-    "document_vectors = [vectorize(s, vocabulary, idf) for s in documents]\n",
+    "document_vectors = [vectorize(document, vocabulary, idf) for document in documents]\n",
     "\n",
     "# Function to compute cosine similarity\n",
     "def cosine_similarity(v1,v2):\n",
@@ -323,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
