--- a/Exercises/04.Link_Based_Ranking/link_ranking.ipynb
+++ b/Exercises/04.Link_Based_Ranking/link_ranking.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,14 @@
    ],
    "source": [
     "from __future__ import print_function, division\n",
+    "# sympy\n",
+    "from sympy.matrices import Matrix\n",
+    "from sympy.interactive.printing import init_printing\n",
+    "\n",
     "import numpy as np\n",
+    "\n",
+    "# sympy init\n",
+    "init_printing(use_unicode=False, wrap_line=False, no_global=True)\n",
     "\n",
     "pr = np.array([1,2,3])\n",
     "print(\"L1-norm of {0} is {1}\".format(pr, pr / np.linalg.norm(pr,1)))\n",
@@ -60,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,6 +91,74 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Implement your code here\n",
+    "def pagerank_eigen_alternative(L):\n",
+    "#   Construct transition probability matrix from L\n",
+    "    \n",
+    "    X = np.sum(L,axis=0)\n",
+    "    R = np.zeros([L.shape[0],L.shape[1]])\n",
+    "    \n",
+    "    for i in range(R.shape[0]):\n",
+    "        for j in range(R.shape[1]):\n",
+    "            R[i,j] = 1 / X[0,j] if X[0,j] != 0 else 0\n",
+    "    \n",
+    "    R = np.multiply(R,L)\n",
+    "#     Compute eigen-vectors and eigen-values of R\n",
+    "#     eigenvalues, eigenvectors = np.linalg.eig(R)\n",
+    "    \n",
+    "    M = Matrix(R)\n",
+    "    eigenvalue = M.eigenvals().values()\n",
+    "    \n",
+    "#     Take the eigen-vector with maximum eigen-value\n",
+    "    max_eigen = np.argmax(eigenvalue)\n",
+    "    eigenvector = M.eigenvects()[max_eigen][2]\n",
+    "    \n",
+    "    if len(eigenvector)==2:\n",
+    "        eigenvector = eigenvector[0]\n",
+    "\n",
+    "    p = np.matrix(eigenvector)\n",
+    "    p = p / np.sum(p)\n",
+    "    return (R,p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L=[[0 0 1]\n",
+      " [1 0 0]\n",
+      " [1 1 0]]\n",
+      "R=[[0.  0.  1. ]\n",
+      " [0.5 0.  0. ]\n",
+      " [0.5 1.  0. ]]\n",
+      "p=[[-0.66666667+0.j]\n",
+      " [-0.33333333+0.j]\n",
+      " [-0.66666667+0.j]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test with the sample in slide\n",
+    "L = np.matrix([\n",
+    "    [0,0,1], \n",
+    "    [1,0,0], \n",
+    "    [1,1,0]\n",
+    "])\n",
+    "R,p = pagerank_eigen(L)\n",
+    "print(\"L={0}\\nR={1}\\np={2}\".format(L,R,p))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -92,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +820,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
