--Exercise 11: Fix minor

--- a/Exercises/11.Entity_and_Information_Extraction/Entity_and_Information_Extraction.ipynb
+++ b/Exercises/11.Entity_and_Information_Extraction/Entity_and_Information_Extraction.ipynb
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
      "output_type": "stream",
      "text": [
       "Transition Probabilities\n",
-      " {'P(I|start)': 0.11764705882352941, 'P(O|start)': 0.8823529411764706, 'P(O|O)': 0.8666666666666667, 'P(O|I)': 0.13333333333333333, 'P(I|O)': 1.0, 'P(I|I)': 0.0} \n",
+      " {'P(I|start)': 0.11764705882352941, 'P(O|start)': 0.8823529411764706, 'P(O|O)': 0.8666666666666667, 'P(O|I)': 1.0, 'P(I|O)': 0.13333333333333333, 'P(I|I)': 0.0} \n",
       "\n",
       "Emission Probabilities\n",
       " {'P(2_upper|O)': 0.014285714285714285, 'P(2_upper|I)': 0.5142857142857142, 'P(1_upper|O)': 0.18095238095238095, 'P(1_upper|I)': 0.014285714285714285, 'P(0_upper|O)': 0.36428571428571427, 'P(0_upper|I)': 0.014285714285714285} \n",
@@ -385,8 +385,8 @@
     "            I_I_count += 1\n",
     "\n",
     "transition_prob['P(O|O)'] = O_O_count / nO\n",
-    "transition_prob['P(O|I)'] = I_O_count / nO\n",
-    "transition_prob['P(I|O)'] = O_I_count / nI\n",
+    "transition_prob['P(O|I)'] = I_O_count / nI\n",
+    "transition_prob['P(I|O)'] = O_I_count / nO\n",
     "transition_prob['P(I|I)'] = I_I_count / nI\n",
     "\n",
     "print('Transition Probabilities\\n',transition_prob, '\\n')\n",
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
